--- a/index.html
+++ b/index.html
@@ -19,13 +19,19 @@
         <div class="row">   
             <div class="col-md-12">
                 <h1>Cadastro de animes</h1>
+                <input type="number" placeholder="id" class="form-control mb-2" v-model="id" disable>
                 <input type="text" placeholder="Nome" class="form-control mb-2" v-model="nome">
                 <input type="text" placeholder="Editora" class="form-control mb-2" v-model="editora">
                 <input type="text" placeholder="Genero" class="form-control mb-2" v-model="genero">
-                <input type="numner" placeholder="Classe etária" class="form-control mb-2" v-model="classe">
+                <input type="number" placeholder="Classe etária" class="form-control mb-2" v-model="classe">
                 <input type="text" placeholder="Episódios" class="form-control mb-2" v-model="ep">
                 <input type="number" placeholder="Ano" class="form-control mb-2" v-model="ano">
-                <button class="btn btn-success mb-5" @click="salvar()">Salvar</button>
+                <div v-if="validar()">
+                    <button class="btn btn-success mb-5" @click="salvar()">Salvar</button>
+                </div>
+                <div v-else>
+                    <button class="btn btn-secondary mb-5" disabled title="Preencha todos os campos para salvar">Salvar</button>
+                </div>
             </div>
         </div>
         <div class="col-md-12">
@@ -33,16 +39,18 @@
             <table class="table table-striped">
                 <thead>
                     <tr>
+                        <th>Id</th>
                         <th>Nome</th>
                         <th>Editora</th>
                         <th>Gênero</th>
-                        <th>Class</th>
+                        <th>Classe</th>
                         <th>Episódios</th>
                         <th>Ano</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr v-for="anime in listaAnimes" :key="anime.nome">
+                    <tr v-for="anime in listaAnimes">
+                        <td>{{ anime.id }}</td>
                         <td>{{ anime.nome }}</td>
                         <td>{{ anime.editora }}</td>
                         <td>{{ anime.genero }}</td>
@@ -54,7 +62,7 @@
             </table>
         </div>
     </div>
-    
+
     <script src="script.js"></script>
 </body>
 </html>
