--- a/index.html
+++ b/index.html
@@ -48,6 +48,9 @@
                         <th>Ano</th>
                     </tr>
                 </thead>
+                <div v-else>
+                    <button class="btn btn-secondary mb-5" disabled title="Preencha todos os campos para salvar">Salvar</button>
+                </div>
                 <tbody>
                     <tr v-for="anime in listaAnimes">
                         <td>{{ anime.id }}</td>
